--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "description": "Module for management of user's identity with crSession and crAcl",
   "dependencies": {
     "angular": ">=1.2",
-    "cr-acl": "*",
+    "cr-acl": "~0.0",
     "cr-session": "~0.1"
   },
   "devDependencies": {
