--- a/bower.json
+++ b/bower.json
@@ -3,8 +3,8 @@
   "description": "Module for management of user's identity with crSession and crAcl",
   "dependencies": {
     "angular": ">=1.2",
-    "cr-acl": "master",
-    "cr-session": "master"
+    "cr-acl": "~0.4",
+    "cr-session": "~0.4"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2"
