--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "cr-identity",
+    "version": "0.4.4",
     "description": "Module for management of user's identity with crSession and crAcl",
     "devDependencies": {
         "karma": "0.12.*",
