--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "cr-identity",
+  "version": "0.4.4",
   "description": "Module for management of user's identity with crSession and crAcl",
   "dependencies": {
     "angular": ">=1.2",
